new menu manifistesto de carga

--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -113,12 +113,13 @@
                     <li ui-sref-active="active"><a ui-sref="app.despacho.todos">Despachos</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.despacho.programada">Solicitud Programada</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.despacho.express">Solicitud Express</a></li>
+
                     <li class="has-sub" ng-class="{active:$state.includes('app.despacho.tipo')}">
-                        <a href="javascript:;"><b class="caret pull-right"></b> Moneda Tipos</a>
+                        <a href="javascript:;"><b class="caret pull-right"></b> Despacho Tipos</a>
                         <ul class="sub-menu">
-                            <li ui-sref-active="active"><a ui-sref="app.despacho.tipo.todos">Moneda Tipos</a></li>
-                            <li ui-sref-active="active"><a ui-sref="app.despacho.tipo.crear">Moneda Crear</a></li>
-                            <li ui-sref-active="active"><a ui-sref="app.despacho.editar">Moneda Buscar</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.despacho.tipo.todos">Despacho Tipos</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.despacho.tipo.crear">Despacho Crear</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.despacho.editar">Despacho Buscar</a></li>
                         </ul>
                     </li>
                     <li ui-sref-active="active"><a ui-sref="app.despacho.tipo">Despachos Tipo</a></li>
@@ -129,13 +130,11 @@
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
                     <i class="fa fa-map"></i>
-                    <span>Modelo Viaje</span>
+                    <span>Manifiestos de Carga</span>
                 </a>
                 <ul class="sub-menu">
-                    <li ui-sref-active="active"><a ui-sref="app.chart.flot">Flot Chart</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.chart.morris">Morris Chart</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.chart.js">Chart JS</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.chart.d3">d3 Chart</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.carga.todos">Manifiestos</a></li>
+
                 </ul>
             </li>
            
