new menu manifistesto de carga

--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -126,7 +126,7 @@
                     <li ui-sref-active="active"><a ui-sref="app.despacho.buscar">Despacho Buscar</a></li>
                 </ul>
             </li>
-            <li class="has-sub" ng-class="{active:$state.includes('app.chart')}">
+            <li class="has-sub" ng-class="{active:$state.includes('app.carga')}">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
                     <i class="fa fa-map"></i>
