--- a/views/carga_todos.html
+++ b/views/carga_todos.html
@@ -1,10 +1,82 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-carga
-</body>
-</html>
+<div ng-controller="tablaFlotaDefaultController">
+    <!-- begin breadcrumb -->
+    <ol class="breadcrumb pull-right">
+        <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Carga</a></li>
+        <li class="active">Tabla Manifiestos</li>
+    </ol>
+    <!-- end breadcrumb -->
+    <!-- begin page-header -->
+    <h1 class="page-header">Tabla Manifiestos de carga <small>Gestión de Despachos</small></h1>
+    <!-- end page-header -->
+
+    <!-- begin row -->
+    <div class="row">
+        <!-- begin col-6 -->
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Tabla Personal </h4>
+                </div>
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>N° Viaje</th>
+                            <th>N° MC</th>
+                            <th>Origen</th>
+                            <th>Destino</th>
+                            <th>Fecha</th>
+                            <th>Estado</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">14222</a></td>
+                            <td>125412</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>45 CONCEPCIÓN</td>
+                            <td>12/12/16 14:59:02-Z</td>
+                            <td>CARGANDO</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">14222</a></td>
+                            <td>125413</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>41 TALCA</td>
+                            <td>12/12/16 15:01:14-Z</td>
+                            <td>PENDIENTE</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">14223</a></td>
+                            <td>125414</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>14 ANTOFAGASTA</td>
+                            <td>12/12/16 15:11:46-Z</td>
+                            <td>RECIBIDO</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">14223</a></td>
+                            <td>125415</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>15 CALAMA</td>
+                            <td>12/12/16 15:14:59-Z</td>
+                            <td>PENDIENTE</td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!-- end panel -->
+        </div>
+    </div>
+    <!-- end row -->
+</div>
