--- a/views/carga_todos.html
+++ b/views/carga_todos.html
@@ -23,9 +23,10 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Tabla Personal </h4>
+                    <h4 class="panel-title">Tabla Manifiestos de Carga </h4>
                 </div>
                 <div class="panel-body">
+                    <button class="btn btn-danger " >Cerrar </button>
                     <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
@@ -45,6 +46,7 @@
                             <td>45 CONCEPCIÓN</td>
                             <td>12/12/16 14:59:02-Z</td>
                             <td>CARGANDO</td>
+                            <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">14222</a></td>
@@ -53,6 +55,7 @@
                             <td>41 TALCA</td>
                             <td>12/12/16 15:01:14-Z</td>
                             <td>PENDIENTE</td>
+                            <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">14223</a></td>
@@ -61,6 +64,7 @@
                             <td>14 ANTOFAGASTA</td>
                             <td>12/12/16 15:11:46-Z</td>
                             <td>RECIBIDO</td>
+                            <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">14223</a></td>
@@ -69,6 +73,7 @@
                             <td>15 CALAMA</td>
                             <td>12/12/16 15:14:59-Z</td>
                             <td>PENDIENTE</td>
+                            <td><input type="checkbox" value="es"> </td>
                         </tr>
 
                         </tbody>
