--- a/views/carga_todos.html
+++ b/views/carga_todos.html
@@ -25,8 +25,9 @@
                     </div>
                     <h4 class="panel-title">Tabla Manifiestos de Carga </h4>
                 </div>
+                <button class="btn btn-danger " >Cerrar Manifiesto</button>
                 <div class="panel-body">
-                    <button class="btn btn-danger " >Cerrar </button>
+
                     <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
@@ -36,6 +37,7 @@
                             <th>Destino</th>
                             <th>Fecha</th>
                             <th>Estado</th>
+                            <th>Cerrar</th>
                         </tr>
                         </thead>
                         <tbody>
