--- a/views/carga_todos.html
+++ b/views/carga_todos.html
@@ -25,9 +25,12 @@
                     </div>
                     <h4 class="panel-title">Tabla Manifiestos de Carga </h4>
                 </div>
-                <button class="btn btn-danger " >Cerrar Manifiesto</button>
+                <div class="col-md-3">
+                    <p>
+                        <button class="btn btn-danger " >Cerrar Manifiesto</button>
+                    </p>
+                </div>
                 <div class="panel-body">
-
                     <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
