--- a/views/carga_todos.html
+++ b/views/carga_todos.html
@@ -81,6 +81,11 @@
                     </table>
                     <div class="col-md-6">
                         <p>
+                            Acciones :
+                        </p>
+                    </div>
+                    <div class="col-md-3">
+                        <p>
                             <button class="btn btn-danger " >Cerrar Manifiesto</button>
                         </p>
                     </div>
