manifiesto de carga new button cerrar

--- a/views/carga_todos.html
+++ b/views/carga_todos.html
@@ -79,14 +79,16 @@
 
                         </tbody>
                     </table>
-                    <div class="col-md-6">
+                    <div class="col-md-5">
                         <p>
                             Acciones :
                         </p>
                     </div>
                     <div class="col-md-3">
                         <p>
-                            <button class="btn btn-danger " >Cerrar Manifiesto</button>
+                            <button class="btn btn-success " >Cerrar Manifiesto</button>
+                            <button class="btn btn-danger " >Anular Manifiesto</button>
+                            <button class="btn btn-info " >Cancelar</button>
                         </p>
                     </div>
                 </div>
