--- a/views/despacho_buscar.html
+++ b/views/despacho_buscar.html
@@ -33,7 +33,7 @@
                         <tr><td>Fecha</td><td>12/12/16 15:25:49</td><td>Estado</td><td>CREADA</td></tr>
                         <tr><td>Patente</td><td>FKCY-89</td><td>Tipo de Vehiculo</td><td>CM40</td></tr>
                         <tr><td>Solicitud</td><td>10041</td><td>Conductor</td><td>09258528-5</td></tr>
-                        <tr><td>Nombre</td><td>Roberto Cienfuegos D.</td><td>Transportista</td>Transportes del Pacifico</td></tr>
+                        <tr><td>Nombre</td><td>Roberto Cienfuegos D.</td><td>Transportista</td><td>Transportes del Pacifico</td></tr>
 
                     </table>
                     <div class="col-md-5">
