--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -29,10 +29,83 @@
                     
                 </ul>
             </li>
+
+            <li class="has-sub" ng-class="{active:$state.includes('app.solicitudes')}">
+                <a href="javascript:;">
+                    <b class="caret pull-right"></b>
+                    <i class="fa fa-book"></i>
+                    <span>Solicitudes</span>
+                </a>
+                <ul class="sub-menu">
+
+                    <li ui-sref-active="active"><a ui-sref="app.solicitudes.todos">Solicitudes</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.solicitudes.programada">Solicitud Programada</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.solicitudes.express">Solicitud Express</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.solicitudes.buscar">Solicitudes Buscar</a></li>
+                </ul>
+            </li>
+            <li class="has-sub" ng-class="{active:$state.includes('app.control')}">
+                <a href="javascript:;">
+                    <b class="caret pull-right"></b>
+                    <i class="fa fa-border"></i>
+                    <span>Controles</span>
+                </a>
+                <ul class="sub-menu">
+
+                    <li ui-sref-active="active"><a ui-sref="app.control.todos">Controles</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.control.ingreso">Control de Ingreso</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.control.salida">Control de Salida</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.control.buscar">Control Buscar</a></li>
+                </ul>
+            </li>
+            <li class="has-sub" ng-class="{active:$state.includes('app.sellos')}">
+                <a href="javascript:;">
+                    <b class="caret pull-right"></b>
+                    <i class="fa fa-barcode"></i>
+                    <span>Sellos</span>
+                </a>
+                <ul class="sub-menu">
+
+                    <li ui-sref-active="active"><a ui-sref="app.sellos.todos">Sellos</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.sellos.crear">Sellos Crear</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.control.buscar">Sellos Buscar</a></li>
+                </ul>
+            </li>
+            <li class="has-sub" ng-class="{active:$state.includes('app.despacho')}">
+                <a href="javascript:;">
+                    <b class="caret pull-right"></b>
+                    <i class="fa fa-send"></i>
+                    <span>Despacho</span>
+                </a>
+                <ul class="sub-menu">
+                    <li ui-sref-active="active"><a ui-sref="app.despacho.todos">Despachos</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.despacho.tipo">Despachos Tipo</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.despacho.buscar">Despacho Buscar</a></li>
+                    <li class="has-sub" ng-class="{active:$state.includes('app.despacho.tipo')}">
+                        <a href="javascript:;"><b class="caret pull-right"></b> Despacho Tipos</a>
+                        <ul class="sub-menu">
+                            <li ui-sref-active="active"><a ui-sref="app.despacho.tipo.todos">Despacho Tipos</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.despacho.tipo.crear">Despacho Crear</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.despacho.editar">Despacho Buscar</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li class="has-sub" ng-class="{active:$state.includes('app.carga')}">
+                <a href="javascript:;">
+                    <b class="caret pull-right"></b>
+                    <i class="fa fa-map"></i>
+                    <span>Manifiestos de Carga</span>
+                </a>
+                <ul class="sub-menu">
+                    <li ui-sref-active="active"><a ui-sref="app.carga.todos">Manifiestos</a></li>
+
+                </ul>
+            </li>
             <li class="has-sub" ng-class="{active:$state.includes('app.personal')}">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
-                    <i class="fa fa-user"></i> 
+                    <i class="fa fa-user"></i>
                     <span>Personal</span>
                 </a>
                 <ul class="sub-menu">
@@ -41,32 +114,34 @@
                     <li ui-sref-active="active"><a ui-sref="app.personal.crear">Personal Crear</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.personal.editar">Personal Editar</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.personal.eliminar">Personal Eliminar</a></li>
-                    <li class="has-sub" ng-class="{active:$state.includes('app.licencia')}">
+                    <li class="has-sub" ng-class="{active:$state.includes('app.personal.licencia')}">
                         <a href="javascript:;"><b class="caret pull-right"></b> Licencia Conducir</a>
                         <ul class="sub-menu">
-                            <li ui-sref-active="active"><a ui-sref="app.licencia.todos">Licencia</a></li>
-                            <li ui-sref-active="active"><a ui-sref="app.licencia.tipo">Licencia Tipos</a></li>
-                            <li ui-sref-active="active"><a ui-sref="app.licencia.crear">Licencia Crear</a></li>
-                            <li ui-sref-active="active"><a ui-sref="app.licencia.editar">Licencia Editar</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.personal.licencia.todos">Licencia</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.personal.licencia.tipo">Licencia Tipos</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.personal.licencia.crear">Licencia Crear</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.personal.licencia.editar">Licencia Editar</a></li>
                         </ul>
                     </li>
                 </ul>
             </li>
-            <li class="has-sub" ng-class="{active:$state.includes('app.contrato')}">
+            <li class="has-sub" ng-class="{active:$state.includes('app.flota')}">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
-                    <i class="fa fa-suitcase"></i>
-                    <span>Contrato</span>
+                    <i class="fa fa-truck"></i>
+                    <span>Flota </span>
                 </a>
                 <ul class="sub-menu">
-                    <li ui-sref-active="active"><a ui-sref="app.contrato.todos">Contratos</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.contrato.buscar">Contratos Buscar</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.contrato.crear">Contratos Crear</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.contrato.editar">Contratos Editar</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.contrato.eliminar">Contratos Eliminar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.flota.todos">Flota</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.flota.buscar">Flota Buscar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.flota.crear">Flota Crear</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.flota.editar">Flota Editar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.flota.eliminar">Flota Eliminar</a></li>
 
                 </ul>
             </li>
+
+
 
             <li class="has-sub" ng-class="{active:$state.includes('app.proveedor')}">
                 <a href="javascript:;">
@@ -88,67 +163,23 @@
                     </li>
                 </ul>
             </li>
-            <li class="has-sub" ng-class="{active:$state.includes('app.flota')}">
+
+            <li class="has-sub" ng-class="{active:$state.includes('app.contrato')}">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
-                    <i class="fa fa-truck"></i> 
-                    <span>Flota </span>
+                    <i class="fa fa-suitcase"></i>
+                    <span>Contrato</span>
                 </a>
                 <ul class="sub-menu">
-                    <li ui-sref-active="active"><a ui-sref="app.flota.todos">Flota</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.flota.buscar">Flota Buscar</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.flota.crear">Flota Crear</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.flota.editar">Flota Editar</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.flota.eliminar">Flota Eliminar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.contrato.todos">Contratos</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.contrato.buscar">Contratos Buscar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.contrato.crear">Contratos Crear</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.contrato.editar">Contratos Editar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.contrato.eliminar">Contratos Eliminar</a></li>
 
                 </ul>
             </li>
-            <li class="has-sub" ng-class="{active:$state.includes('app.despacho')}">
-                <a href="javascript:;">
-                    <b class="caret pull-right"></b>
-                    <i class="fa fa-send"></i>
-                    <span>Despacho</span>
-                </a>
-                <ul class="sub-menu">
-                    <li ui-sref-active="active"><a ui-sref="app.despacho.todos">Despachos</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.despacho.programada">Solicitud Programada</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.despacho.express">Solicitud Express</a></li>
 
-                    <li class="has-sub" ng-class="{active:$state.includes('app.despacho.tipo')}">
-                        <a href="javascript:;"><b class="caret pull-right"></b> Despacho Tipos</a>
-                        <ul class="sub-menu">
-                            <li ui-sref-active="active"><a ui-sref="app.despacho.tipo.todos">Despacho Tipos</a></li>
-                            <li ui-sref-active="active"><a ui-sref="app.despacho.tipo.crear">Despacho Crear</a></li>
-                            <li ui-sref-active="active"><a ui-sref="app.despacho.editar">Despacho Buscar</a></li>
-                        </ul>
-                    </li>
-                    <li ui-sref-active="active"><a ui-sref="app.despacho.tipo">Despachos Tipo</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.despacho.buscar">Despacho Buscar</a></li>
-                </ul>
-            </li>
-            <li class="has-sub" ng-class="{active:$state.includes('app.carga')}">
-                <a href="javascript:;">
-                    <b class="caret pull-right"></b>
-                    <i class="fa fa-map"></i>
-                    <span>Manifiestos de Carga</span>
-                </a>
-                <ul class="sub-menu">
-                    <li ui-sref-active="active"><a ui-sref="app.carga.todos">Manifiestos</a></li>
-
-                </ul>
-            </li>
-           
-            <li class="has-sub" ng-class="{active:$state.includes('app.map')}">
-                <a href="javascript:;">
-                    <b class="caret pull-right"></b>
-                    <i class="fa fa-map-marker"></i>
-                    <span>Estado Viaje</span>
-                </a>
-                <ul class="sub-menu">
-                    <li ui-sref-active="active"><a ui-sref="app.map.vector">Vector Map</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.map.google">Google Map</a></li>
-                </ul>
-            </li>
              <li class="has-sub">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
@@ -160,24 +191,12 @@
                     <li><a href="views/email_newsletter.html" target="_blank">Newsletter Template</a></li>
                 </ul>
             </li>
-          
-            
-            <li class="has-sub" ng-class="{active:$state.includes('app.gallery')}">
-                <a href="javascript:;">
-                    <b class="caret pull-right"></b>
-                    <i class="fa fa-money"></i>
-                    <span>Pago Servicios</span>
-                </a>
-                <ul class="sub-menu">
-                    <li ui-sref-active="active"><a ui-sref="app.gallery.v1">Gallery v1</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.gallery.v2">Gallery v2</a></li>
-                </ul>
-            </li>
+
             <li class="has-sub" ng-class="{active:$state.includes('app.moneda')}">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
                     <i class="fa fa-euro"></i>
-                    <span>Moneda</span>
+                    <span>Tarifas</span>
                 </a>
                 <ul class="sub-menu">
                     <li ui-sref-active="active"><a ui-sref="app.moneda.todos">Moneda</a></li>
@@ -191,6 +210,19 @@
                         </ul>
                     </li>
 
+                </ul>
+            </li>
+
+            <li class="has-sub" ng-class="{active:$state.includes('app.usuario')}">
+                <a href="javascript:;">
+                    <b class="caret pull-right"></b>
+                    <i class="fa fa-database"></i>
+                    <span>Usuarios</span>
+                </a>
+                <ul class="sub-menu">
+                    <li ui-sref-active="active"><a ui-sref="app.usuario.todos">Usuarios</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.usuario.crear">Usuarios Crear</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.usuario.buscar">Usuarios Buscar</a></li>
                 </ul>
             </li>
          
