new sidebar menu

--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -47,7 +47,7 @@
             <li class="has-sub" ng-class="{active:$state.includes('app.control')}">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
-                    <i class="fa fa-border"></i>
+                    <i class="fa fa-flag-checkered"></i>
                     <span>Controles</span>
                 </a>
                 <ul class="sub-menu">
