filter manifiestos de carga

--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -38,10 +38,10 @@
                 </a>
                 <ul class="sub-menu">
 
-                    <li ui-sref-active="active"><a ui-sref="app.solicitudes.todos">Solicitudes</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.solicitudes.programada">Solicitud Programada</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.solicitudes.express">Solicitud Express</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.solicitudes.buscar">Solicitudes Buscar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.solicitud.todos">Solicitudes</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.solicitud.programada">Solicitud Programada</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.solicitud.express">Solicitud Express</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.solicitud.buscar">Solicitudes Buscar</a></li>
                 </ul>
             </li>
             <li class="has-sub" ng-class="{active:$state.includes('app.control')}">
