--- a/views/carga_todos.html
+++ b/views/carga_todos.html
@@ -24,139 +24,71 @@
                     </div>
                     <h4 class="panel-title">Filtros de busqueda </h4>
                 </div>
-                    <form class="form-horizontal">
+            </div>
+            <div class="panel-body">
+                <form class="form-horizontal">
+                <div class="form-group">
+                    <label class="col-md-2 control-label">Numero de Viaje</label>
+                    <div class="col-md-9">
+                        <input type="text" class="form-control" placeholder="10021" />
+                    </div>
+                </div>
                     <div class="form-group">
-                        <label class="col-md-3 control-label">Default Input</label>
+                        <label class="col-md-2 control-label">Numero de Manifiesto de Carga</label>
                         <div class="col-md-9">
-                            <input type="text" class="form-control" placeholder="Default input" />
+                            <input type="text" class="form-control" placeholder="10021" />
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label class="col-md-3 control-label">Disabled Input</label>
-                        <div class="col-md-9">
-                            <input type="text" class="form-control" placeholder="Disabled input" disabled />
+
+                <div class="form-group">
+                    <label class="col-md-3 control-label">Origen</label>
+                    <div class="col-md-9">
+                        <select class="form-control">
+                            <option>Todos</option>
+                            <option>00 CD- SANTIAGO</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-3 control-label">Destino</label>
+                    <div class="col-md-9">
+                        <select class="form-control">
+                            <option>Todos</option>
+                            <option>45 CONCEPCION</option>
+                            <option>41 TALCA</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label">Fecha</label>
+                    <div class="col-md-8">
+                        <div class="input-group input-daterange">
+                            <input type="text" class="form-control" name="start" placeholder="Inicio" />
+                            <span class="input-group-addon">a</span>
+                            <input type="text" class="form-control" name="end" placeholder="Termino" />
                         </div>
                     </div>
+                </div>
                     <div class="form-group">
-                        <label class="col-md-3 control-label">Select</label>
+                        <label class="col-md-3 control-label">Estado</label>
                         <div class="col-md-9">
                             <select class="form-control">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
+                                <option>Todos</option>
+                                <option>Cargando</option>
+                                <option>Recibido</option>
                             </select>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label class="col-md-3 control-label">Select (multiple)</label>
-                        <div class="col-md-9">
-                            <select multiple class="form-control">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                            </select>
-                        </div>
+
+
+                <div class="form-group">
+                    <label class="col-md-3 control-label">Acciones:</label>
+                    <div class="col-md-9">
+                        <button type="submit" class="btn btn-sm btn-success">Buscar</button>
                     </div>
-                    <div class="form-group">
-                        <label class="col-md-3 control-label">Textarea</label>
-                        <div class="col-md-9">
-                            <textarea class="form-control" placeholder="Textarea" rows="5"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-3 control-label">Checkbox</label>
-                        <div class="col-md-9">
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox" value="" />
-                                    Checkbox Label 1
-                                </label>
-                            </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox" value="" />
-                                    Checkbox Label 2
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-3 control-label">Inline Checkbox</label>
-                        <div class="col-md-9">
-                            <label class="checkbox-inline">
-                                <input type="checkbox" value="" />
-                                Checkbox Label 1
-                            </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" value="" />
-                                Checkbox Label 2
-                            </label>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-3 control-label">Radio Button</label>
-                        <div class="col-md-9">
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optionsRadios" value="option1" checked />
-                                    Radio option 1
-                                </label>
-                            </div>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" name="optionsRadios" value="option2" />
-                                    Radio option 2
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-3 control-label">Inline Radio Button</label>
-                        <div class="col-md-9">
-                            <label class="radio-inline">
-                                <input type="radio" name="optionsRadios" value="option1" checked />
-                                Radio option 1
-                            </label>
-                            <label class="radio-inline">
-                                <input type="radio" name="optionsRadios" value="option2" />
-                                Radio option 2
-                            </label>
-                        </div>
-                    </div>
-                    <div class="form-group has-success has-feedback">
-                        <label class="col-md-3 control-label">Input with Success</label>
-                        <div class="col-md-9">
-                            <input type="text" class="form-control" />
-                            <span class="fa fa-check form-control-feedback"></span>
-                        </div>
-                    </div>
-                    <div class="form-group has-warning has-feedback">
-                        <label class="col-md-3 control-label">Input with Warning</label>
-                        <div class="col-md-9">
-                            <input type="text" class="form-control" />
-                            <span class="fa fa-warning form-control-feedback"></span>
-                        </div>
-                    </div>
-                    <div class="form-group has-error has-feedback">
-                        <label class="col-md-3 control-label">Input with Error</label>
-                        <div class="col-md-9">
-                            <input type="text" class="form-control" />
-                            <span class="fa fa-times form-control-feedback"></span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-3 control-label">Submit</label>
-                        <div class="col-md-9">
-                            <button type="submit" class="btn btn-sm btn-success">Submit Button</button>
-                        </div>
-                    </div>
-                </form>
-                <div class="panel-body">
-                    </div>
+                </div>
+            </form>
+            <div class="panel-body">
                 </div>
             </div>
         </div>
