filter manifiestos de carga

--- a/views/carga_todos.html
+++ b/views/carga_todos.html
@@ -12,6 +12,7 @@
 
     <!-- begin row -->
     <div class="row">
+
         <div class="col-md-12">
             <!-- begin panel -->
             <div class="panel panel-inverse">
@@ -22,77 +23,77 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Filtros de busqueda </h4>
+                    <h4 class="panel-title">Filtros de Busqueda </h4>
                 </div>
+
+                <div class="panel-body">
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label class="col-md-2 control-label">Numero de Viaje</label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" placeholder="10021" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-2 control-label">Numero de Manifiesto de Carga</label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" placeholder="10021" />
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Origen</label>
+                            <div class="col-md-9">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>00 CD- SANTIAGO</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Destino</label>
+                            <div class="col-md-9">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>45 CONCEPCION</option>
+                                    <option>41 TALCA</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-4 control-label">Fecha</label>
+                            <div class="col-md-8">
+                                <div class="input-group input-daterange">
+                                    <input type="text" class="form-control" name="start" placeholder="Inicio" />
+                                    <span class="input-group-addon">a</span>
+                                    <input type="text" class="form-control" name="end" placeholder="Termino" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Estado</label>
+                            <div class="col-md-9">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>Cargando</option>
+                                    <option>Recibido</option>
+                                </select>
+                            </div>
+                        </div>
+
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Acciones:</label>
+                            <div class="col-md-9">
+                                <button type="submit" class="btn btn-sm btn-success">Buscar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
             </div>
-            <div class="panel-body">
-                <form class="form-horizontal">
-                <div class="form-group">
-                    <label class="col-md-2 control-label">Numero de Viaje</label>
-                    <div class="col-md-9">
-                        <input type="text" class="form-control" placeholder="10021" />
-                    </div>
-                </div>
-                    <div class="form-group">
-                        <label class="col-md-2 control-label">Numero de Manifiesto de Carga</label>
-                        <div class="col-md-9">
-                            <input type="text" class="form-control" placeholder="10021" />
-                        </div>
-                    </div>
-
-                <div class="form-group">
-                    <label class="col-md-3 control-label">Origen</label>
-                    <div class="col-md-9">
-                        <select class="form-control">
-                            <option>Todos</option>
-                            <option>00 CD- SANTIAGO</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-md-3 control-label">Destino</label>
-                    <div class="col-md-9">
-                        <select class="form-control">
-                            <option>Todos</option>
-                            <option>45 CONCEPCION</option>
-                            <option>41 TALCA</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Fecha</label>
-                    <div class="col-md-8">
-                        <div class="input-group input-daterange">
-                            <input type="text" class="form-control" name="start" placeholder="Inicio" />
-                            <span class="input-group-addon">a</span>
-                            <input type="text" class="form-control" name="end" placeholder="Termino" />
-                        </div>
-                    </div>
-                </div>
-                    <div class="form-group">
-                        <label class="col-md-3 control-label">Estado</label>
-                        <div class="col-md-9">
-                            <select class="form-control">
-                                <option>Todos</option>
-                                <option>Cargando</option>
-                                <option>Recibido</option>
-                            </select>
-                        </div>
-                    </div>
-
-
-                <div class="form-group">
-                    <label class="col-md-3 control-label">Acciones:</label>
-                    <div class="col-md-9">
-                        <button type="submit" class="btn btn-sm btn-success">Buscar</button>
-                    </div>
-                </div>
-            </form>
-            <div class="panel-body">
-                </div>
-            </div>
+            <!-- end panel -->
         </div>
-
         <div class="col-md-12">
             <!-- begin panel -->
             <div class="panel panel-inverse">
