--- a/views/carga_todos.html
+++ b/views/carga_todos.html
@@ -47,7 +47,7 @@
                                     <option>00 CD- SANTIAGO</option>
                                 </select>
                             </div>
-                            <label class="col-md-1 control-label">Destino</label>
+                            <label class="col-md-2 control-label">Destino</label>
                             <div class="col-md-2">
                                 <select class="form-control">
                                     <option>Todos</option>
@@ -132,7 +132,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>41 TALCA</td>
                             <td>12/12/16 15:01:14-Z</td>
-                            <td>PENDIENTE</td>
+                            <td>CREADO</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
@@ -150,10 +150,27 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>15 CALAMA</td>
                             <td>12/12/16 15:14:59-Z</td>
-                            <td>PENDIENTE</td>
+                            <td>EN VIAJE</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
-
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">14224</a></td>
+                            <td>125416</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>05 PARQUE ARAUCO</td>
+                            <td>05/01/17 10:14:59-Z</td>
+                            <td>CREADO</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">14225</a></td>
+                            <td>125417</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>12 MALL PLAZA NORTE</td>
+                            <td>05/01/17 09:04:59-Z</td>
+                            <td>ANULADO</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
                         </tbody>
                     </table>
                     <div class="col-md-1">
