nuevo menu b2b app

--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -41,6 +41,7 @@
                     <li ui-sref-active="active"><a ui-sref="app.solicitud.todos">Solicitudes</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.solicitud.programada">Solicitud Programada</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.solicitud.express">Solicitud Express</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.solicitud.publicar">Solicitud Publicar</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.solicitud.buscar">Solicitudes Buscar</a></li>
                 </ul>
             </li>
