cambio icono de B2B

--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -228,7 +228,7 @@
             <li class="has-sub" ng-class="{active:$state.includes('app.b2b')}">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
-                    <i class="fa fa-suitcase"></i>
+                    <i class="fa fa-exchange"></i>
                     <span>B2B</span>
                 </a>
                 <ul class="sub-menu">
