--- a/views/solicitud_publicar.html
+++ b/views/solicitud_publicar.html
@@ -33,9 +33,14 @@
                             <div class="col-md-2">
                                 <input type="text" class="form-control" placeholder="10021" />
                             </div>
-                            <label class="col-md-2 control-label">Numero de Manifiesto de Carga</label>
+                            <label class="col-md-3 control-label">Transportista</label>
                             <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="10021" />
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>1 - Transportes del Pacifico</option>
+                                    <option>2 - Transportes del PIPAU</option>
+
+                                </select>
                             </div>
                         </div>
 
@@ -108,6 +113,7 @@
                         <thead>
                         <tr>
                             <th>N° Solicitud</th>
+                            <th>Transportista</th>
                             <th>Origen</th>
                             <th>Destino</th>
                             <th>Fecha</th>
@@ -117,7 +123,8 @@
                         </thead>
                         <tbody>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14222</a></td>
+                            <td><a href="carga_todos.html">14222</a></td>.
+                            <td>Trasportes del Pacifico</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>12/12/16 14:59:02-Z</td>
@@ -126,6 +133,7 @@
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">14222</a></td>
+                            <td>Trasportes del Pacifico</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>41 TALCA</td>
                             <td>12/12/16 15:01:14-Z</td>
@@ -134,6 +142,7 @@
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">14223</a></td>
+                            <td>Trasportes del Pacifico</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>14 ANTOFAGASTA</td>
                             <td>12/12/16 15:11:46-Z</td>
@@ -142,6 +151,7 @@
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">14223</a></td>
+                            <td>Trasportes PIPAU</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>15 CALAMA</td>
                             <td>12/12/16 15:14:59-Z</td>
@@ -150,6 +160,7 @@
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">14224</a></td>
+                            <td>Trasportes PIPAU</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>05 PARQUE ARAUCO</td>
                             <td>05/01/17 10:14:59-Z</td>
@@ -158,6 +169,7 @@
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">14225</a></td>
+                            <td>Trasportes PIPAU</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>12 MALL PLAZA NORTE</td>
                             <td>05/01/17 09:04:59-Z</td>
