--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -30,7 +30,7 @@
                 </ul>
             </li>
 
-            <li class="has-sub" ng-class="{active:$state.includes('app.solicitudes')}">
+            <li class="has-sub" ng-class="{active:$state.includes('app.solicitud')}">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
                     <i class="fa fa-book"></i>
