--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -79,7 +79,8 @@
                 </a>
                 <ul class="sub-menu">
                     <li ui-sref-active="active"><a ui-sref="app.despacho.todos">Despachos</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.despacho.tipo">Despachos Tipo</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.despacho.validar">Validaciones de Salida</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.despacho.editar">Despachos Editar</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.despacho.buscar">Despacho Buscar</a></li>
                     <li class="has-sub" ng-class="{active:$state.includes('app.despacho.tipo')}">
                         <a href="javascript:;"><b class="caret pull-right"></b> Despacho Tipos</a>
