--- a/views/despacho_validar.html
+++ b/views/despacho_validar.html
@@ -71,7 +71,13 @@
                         </tr>
                         </tbody>
                     </table>
+                    <div class="alert alert-success fade in m-b-5">
+                        <strong>
+                            La Vereficacion de Documentos fue Exitosa
+                        </strong>
+                        , Vehiculo Habilitado para Despacho
 
+                    </div>
 
                     <div class="col-md-1">
                         <p>
