pantalla validaciones de salida

--- a/views/despacho_validar.html
+++ b/views/despacho_validar.html
@@ -7,7 +7,7 @@
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Tabla Manifiestos de carga <small>Gestión de Despachos</small></h1>
+    <h1 class="page-header">Vereficaciones de Salida <small>Gestión de Despachos</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
