CONTROL DE SALIDA

--- a/views/control_ingreso.html
+++ b/views/control_ingreso.html
@@ -7,7 +7,7 @@
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Control de Ingreso <small>Formulario de Ingreso</small></h1>
+    <h1 class="page-header">Control de Ingreso <small>Gestión del Control</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
