--- a/views/control_salida.html
+++ b/views/control_salida.html
@@ -1,10 +1,112 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div ng-controller="MonedaTipoCrearController">
+    <!-- begin breadcrumb -->
+    <ol class="breadcrumb pull-right">
+        <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Control</a></li>
+        <li class="active">Salida</li>
+    </ol>
+    <!-- end breadcrumb -->
+    <!-- begin page-header -->
+    <h1 class="page-header">Control de Salida <small>Gestión del Control</small></h1>
+    <!-- end page-header -->
 
-</body>
-</html>
+    <!-- begin row -->
+    <div class="row">
+        <!-- begin col-12 -->
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse" data-sortable-id="form-stuff-1">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Formulario de Salida de Vehiculo</h4>
+                </div>
+                <div class="panel-body">
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Patente</label>
+                            <div class="col-md-3">
+                                <input type="text" class="form-control" placeholder="BBBB-01" ng-model="monet_id"  />
+                            </div>
+                        </div>
+
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Enviar</label>
+                            <div class="col-md-9">
+                                <button type="submit" class="btn btn-sm btn-success" ng-click="verificarMoneda_Tipo()">Hecer Ingreso</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>Patente</th>
+                            <th>Proveedor</th>
+                            <th>Rev/Tec</th>
+                            <th>Per/Cir</th>
+                            <th>Cer/Gses</th>
+                            <th>Peso Despacho</th>
+                            <th>Volumen</th>
+                            <th>Estado</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td>HVCV-80</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>19-SEP-17</td>
+                            <td>19-SEP-17</td>
+                            <td>31-MAR-17</td>
+                            <td>1520</td>
+                            <td>20</td>
+                            <td>ESPERANDO SALIDA</td>
+                        </tr>
+                        </tbody>
+                    </table>
+
+                    <table id="data-table2" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>Rut</th>
+                            <th>Nombre</th>
+                            <th>Sexo</th>
+                            <th>Fecha Nacimiento</th>
+                            <th>Proveedor</th>
+                            <th>Telefono</th>
+                            <th>Licencia</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td>14558557</td>
+                            <td>Juan Carlos Matamala Duran</td>
+                            <td>Masculino</td>
+                            <td>22/05/1941</td>
+                            <td>TRASPORTES DEL PACIFICO</td>
+                            <td>+56 2 1125 2251</td>
+                            <td>A5</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <div class="alert alert-success fade in m-b-5">
+                        <strong>
+                            La Vereficacion de Documentos fue Exitosa
+                        </strong>
+                        , Vehiculo Habilitado para Despacho
+                    </div>
+                </div>
+            </div>
+            <!-- end panel -->
+        </div>
+        <!-- end col-12 -->
+
+    </div>
+    <!-- end row -->
+</div>
