change col size

--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -66,9 +66,8 @@
                 </a>
                 <ul class="sub-menu">
 
-                    <li ui-sref-active="active"><a ui-sref="app.sellos.todos">Sellos</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.sellos.crear">Sellos Crear</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.control.buscar">Sellos Buscar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.sello.todos">Sellos</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.sello.crear">Sellos Asignar</a></li>
                 </ul>
             </li>
             <li class="has-sub" ng-class="{active:$state.includes('app.despacho')}">
