change col size

--- a/views/sello_crear.html
+++ b/views/sello_crear.html
@@ -70,7 +70,7 @@
                             <td>31-MAR-17</td>
                             <td>1520</td>
                             <td>20</td>
-                            <td>ESPERANDO SALIDA</td>
+                            <td>ESTIBADO</td>
                         </tr>
                         </tbody>
                     </table>
