--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -233,10 +233,10 @@
                     <span>B2B</span>
                 </a>
                 <ul class="sub-menu">
-                    <li ui-sref-active="active"><a ui-sref="app.b2b.publicar">Solicitudes Publicadas</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.b2b.despachos">Despachos</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.b2b.aceptar">Solicitudes Publicadas</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.b2b.despacho">Despachos</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.b2b.oc">Ordenes de Facturación</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.b2b.facturas">Facturas</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.b2b.factura">Facturas</a></li>
                 </ul>
             </li>
             <!-- begin sidebar minify button -->
