--- a/views/index.html
+++ b/views/index.html
@@ -78,10 +78,10 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Stacked Bar Chart</h4>
+                    <h4 class="panel-title">Stacked Area Chart</h4>
                 </div>
                 <div class="panel-body">
-                    <div id="nv-stacked-bar-chart" class="height-sm"></div>
+                    <div id="nv-stacked-area-chart" class="height-sm"></div>
                 </div>
             </div>
         </div>
