--- a/template/top-menu.html
+++ b/template/top-menu.html
@@ -7,7 +7,7 @@
             <a href="javascript:;">
                 <b class="caret pull-right"></b>
                 <i class="fa fa-laptop"></i>
-                <span>Dashboard</span>
+                <span>Dashboard.dd</span>
             </a>
             <ul class="sub-menu">
                 <li ui-sref-active="active"><a ui-sref="app.dashboard.v1">Dashboard v1</a></li>
