--- a/views/solicitud_express.html
+++ b/views/solicitud_express.html
@@ -81,8 +81,8 @@
                             <label class="col-md-3 control-label">Tipo de Vehiculo</label>
                             <div class="col-md-9">
                                 <select class="form-control">
-                                    <option>CM40</option>
-                                    <option>CM50</option>
+                                    <option>CM40 - 40 Metros Cubicos</option>
+                                    <option>CM50 - 50 Metros Cubicos</option>
                                     <option>Otro</option>
                                 </select>
                             </div>
