--- a/views/b2b_despacho.html
+++ b/views/b2b_despacho.html
@@ -98,7 +98,7 @@
                             <th>Destino</th>
                             <th>Fecha Presentación</th>
                             <th>Estado</th>
-                            <th>Aceptar/Rechazar</th>
+                            <th>Seleccionar</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -130,7 +130,7 @@
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14223</a></td>
+                            <td><a href="carga_todos.html">214223</a></td>
                             <td>UM</td>
                             <td>00 CT - ANTOFAGASTA</td>
                             <td>99 CLIENTE</td>
@@ -139,7 +139,7 @@
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14224</a></td>
+                            <td><a href="carga_todos.html">214224</a></td>
                             <td>DDC</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>955 ZONA 9</td>
@@ -148,7 +148,7 @@
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">14225</a></td>
+                            <td><a href="carga_todos.html">214225</a></td>
                             <td>TRONCAL</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>12 MALL PLAZA NORTE</td>
@@ -163,11 +163,12 @@
                             Acciones :
                         </p>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-md-6">
                         <p>
-                            <button class="btn btn-success " >Aceptar Solicitud</button>
-                            <button class="btn btn-danger " >Rechazar Solicitud</button>
-                            <button class="btn btn-info " >Cancelar</button>
+                            <button class="btn btn-success " >Agregar</button>
+                            <button class="btn btn-danger " >Eliminar</button>
+                            <button class="btn btn-inverse" >Objetar</button>
+                            <button class="btn btn-info" >Cancelar</button>
                         </p>
                     </div>
                 </div>
